<resources>
    <string name="app_name">My Application</string>
    <string name="city"> Введите   город </string>
    <string name="a">Температура </string>
    <string name="b"> в  вашем  городе</string>
    <string name="_8">8</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="ac">AC</string>
    <string name="Узнать">Узнать</string>
    <string name="Калькулятор">Калькулятор</string>
    <string name="courses">Courses</string>
    <string name="app">APP</string>
    <string name="title_activity_dictionary">Dictionary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="todo">TODO</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="История">История</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_main4">Main4Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Поиск">Поиск</string>
    <string name="Категории">Категории</string>
    <string name="dictionary">Dictionary</string>
    <string name="button">Button</string>
    <string name="eng_ru_dictionary">Eng-RU
        dictionary</string>
</resources>