<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/bangers"
            android:text="@string/courses"
            android:textColor="@color/white"
            android:textSize="48sp"
            style="@style/Theme.AppCompat.DayNight.DarkActionBar"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:fontFamily="@font/bangers"
            android:gravity="center"
            android:text="@string/app"
            android:textColor="@color/white"
            android:textSize="48sp" />
    </LinearLayout>


    <ImageButton
        android:id="@+id/button10"
        android:layout_width="67dp"
        android:layout_height="63dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/app_name"
        android:onClick="GoCalculatorActivity"
        android:text="@string/Калькулятор"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954"
        app:srcCompat="@drawable/just_2020934"
        tools:ignore="UsingOnClickInXml" />


    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="255dp"
        android:layout_height="128dp"
        android:background="@drawable/cloud_153992"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="38dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/a"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/W"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="63dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/b"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="159dp"
        android:background="@drawable/skyline_304802"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/edit"
            android:layout_width="372dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:gravity="bottom|center_horizontal"
            android:hint="@string/city"
            android:textColor="@color/ff"
            android:textColorHint="@color/ff"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.567"
            tools:ignore="MissingConstraints,TextFields" />

        <Button
            android:id="@+id/btnW"
            android:layout_width="416dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:text="@string/Узнать"
            android:textColor="#FFEB3B"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/button"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/_7"
        android:gravity="center"
        android:src="@mipmap/ic_dictionary_foreground"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/button10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toTopOf="@+id/button10"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>
